manifests/2-db.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: scratchpay
  name: mysql-db
  labels:
    app: mysql-db
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
        - name: mysql-db
          image: mysql:8.0.29
          args: 
            - "--secure-file-priv=docker-entrypoint-initdb.d"
          ports:
          - containerPort: 3306
          readinessProbe:
            tcpSocket:
              port: 3306
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 150m
              memory: 300Mi
            limits:
              cpu: 300m
              memory: 600Mi
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d/init.sql
              name: db-init
              subPath: sql.init
            - mountPath: /docker-entrypoint-initdb.d/init_data/data.csv
              name: db-init
              subPath: data.csv
            - mountPath: /var/lib/mysql
              name: database
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: db-init
          configMap:
            name: mysql-files
        - name: database
          persistentVolumeClaim:
            claimName: database-storage
