manifests/3-app.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: scratchpay
  name: users-api
  labels:
    app: users-api
spec:
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
      labels:
        app: users-api
    spec:
      containers:
        - name: users-api
          image: richimarchi/users-api:v0.1.0
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTPS
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          startupProbe:
            exec:
              command:
                - "/bin/sh"
                - "-c"
                - "nc -w3 db-service.scratchpay.svc.cluster.local 3306"
            failureThreshold: 5
            periodSeconds: 15
            timeoutSeconds: 5
          ports:
          - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 200Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /misc/server.crt
              name: certificate
              subPath: tls.crt
            - mountPath: /misc/server.key
              name: certificate
              subPath: tls.key
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      volumes:
        - name: certificate
          secret:
            secretName: app-certificate
