manifests/5-db.svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: scratchpay
  name: db-service
spec:
  selector:
    app: mysql-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
