manifests/app.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: scratchpay
spec:
  selector:
    app: users-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
