manifests/6-app.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: scratchpay
  name: users-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
      - users-api
    secretName: app-certificate
  rules:
  - host: users-api
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 8080
